--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4e205558d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff93f005950&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4e2028acd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4e2028aed0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff93ed15d90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff93ed15f90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4e207e0590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4e207e0790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff93f2826d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff93f2828d0&gt;]</pre>
 </div>
 
 </div>
