--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0e03571850&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f49f592f8d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0e032a3dd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0e032a3fd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f49f55edd50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f49f55edf50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0e03815750&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0e03815950&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f49f5bb7690&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f49f5bb7890&gt;]</pre>
 </div>
 
 </div>
