--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f49f592f8d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f569e1a9310&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f49f55edd50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f49f55edf50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f569de72d10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f569de72f10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f49f5bb7690&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f49f5bb7890&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f569e4345d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f569e4347d0&gt;]</pre>
 </div>
 
 </div>
