--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc49ff0f710&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe595f90590&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc49f90c210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc49fc49e10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe595c47d10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe595c47f10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc4a01eb610&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc4a01a0710&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe59621a5d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe59621a7d0&gt;]</pre>
 </div>
 
 </div>
