--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe595f90590&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3518082710&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe595c47d10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe595c47f10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3517da5b90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3517da5dd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe59621a5d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe59621a7d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f35182fc450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f35182fc690&gt;]</pre>
 </div>
 
 </div>
