--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5fcafab850&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbed7cb4510&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5fcac79bd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5fcac79d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbed79d70d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbed79e5d50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5fcb221510&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5fcb2216d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbed7fa19d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbed7f3c690&gt;]</pre>
 </div>
 
 </div>
