--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa733a44510&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0b90f6e710&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa733796bd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa733796dd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0b90f9acd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0b90f9aed0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa733d22290&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa733ced6d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0b911ed690&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0b911ed890&gt;]</pre>
 </div>
 
 </div>
