--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0dfc302d90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5538c0b550&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0dfbd06d50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0dfbd06f50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5538f5fc90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5538f5fe90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0dfc591690&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0dfc591890&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f55391ad5d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f55391ad7d0&gt;]</pre>
 </div>
 
 </div>
