--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb31c0256d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f889d3e1210&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb31bd0ac10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb31bd0ae10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f889d7c0c10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f889d7c0e10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb31c2cd4d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb31c31f210&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f889dd18490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f889dd18690&gt;]</pre>
 </div>
 
 </div>
