--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f35408ff590&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7fff8c6f50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f354066ee90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f35406870d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7fff2c0e10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7fff2c0fd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3540be6810&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3540be6a10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7fffb4a6d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7fffb4a8d0&gt;]</pre>
 </div>
 
 </div>
