--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7fff8c6f50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f380bb4d6d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7fff2c0e10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7fff2c0fd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f380b885b90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f380b885d90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7fffb4a6d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7fffb4a8d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f380bddc550&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f380bddc750&gt;]</pre>
 </div>
 
 </div>
