--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f380bb4d6d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb370ae9d10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f380b885b90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f380b885d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb370818c50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb370818e50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f380bddc550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f380bddc750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb3710be590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb3710be790&gt;]</pre>
 </div>
 
 </div>
