--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb370ae9d10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe7635ba550&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb370818c50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb370818e50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe7632dbb10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe7632dbd10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb3710be590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb3710be790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe76384b490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe76384b690&gt;]</pre>
 </div>
 
 </div>
