--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7febc820ec50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7c1d080b10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7febc8279bd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7febc8279dd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7c1cdbaad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7c1cdbacd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7febc87e34d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7febc87e36d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7c1d313390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7c1d313590&gt;]</pre>
 </div>
 
 </div>
