--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4fefe65d90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff10ade6ad0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4fefb85990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4fefb85b90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff10a470c90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff10a470e90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4ff00ee2d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4ff00ee4d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff10acff550&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff10acff750&gt;]</pre>
 </div>
 
 </div>
