--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbe4e4fd850&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7d8b9d2790&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbe4def3e10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbe4def3fd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7d8b6ded90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7d8b6def90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbe4e775810&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbe4e775a10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7d8bf69690&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7d8bf69890&gt;]</pre>
 </div>
 
 </div>
