--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7d8b9d2790&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb44ef5fb90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7d8b6ded90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7d8b6def90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb44ec8ec10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb44ec8ee50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7d8bf69690&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7d8bf69890&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb44f1e55d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb44f1e5810&gt;]</pre>
 </div>
 
 </div>
