--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f542f159890&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc00f4583d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f542ee7ec50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f542ee7ee50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc00f1c8ad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc00f1c8cd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f542f3d54d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f542f3d56d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc00f71f390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc00f71f590&gt;]</pre>
 </div>
 
 </div>
