--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5d7a0aa2d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5a46763cd0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5d79dcecd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5d79dceed0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5a46175c90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5a46175e90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5d7a325550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5d7a325750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5a46a4e710&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5a46a02790&gt;]</pre>
 </div>
 
 </div>
