--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcea24e3b90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0235055c90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcea1edbcd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcea1edbed0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0234a40bd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0234a40dd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcea276a590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcea276a790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f02352cd4d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f02352cd6d0&gt;]</pre>
 </div>
 
 </div>
